chore :  err fix_4메서드명을 명확